完善创建player